--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 		<title>Servizi attivi per il COVID-19</title>
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico" />
 		<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500;600&family=Ranchers&display=swap" rel="stylesheet">
     </head>
     <body>
         <div id="bloc_page">
