Add baniere image

--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
 							<li><a href = "#">esercizio fisico</a></li>
 							<li><a href ="#">bambini e famiglie</a></li>
 						</ul>
-						<div id="menu_speciale"></div>
 				</nav>
 			</header>
+			<div id ="baniere_img">
+				<p>L'anno 2020 è stato l'anno che si ricorderà l'umanita a traverso la pandemia <strong>COVID-19</strong></p>
+			</div>
         </div>
     </body>
 </html>
