Create file index.html and css

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500;600&family=Ranchers&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div id="bloc_page">
+        <div id="bloc-page">
             <header>
-				<div id = "blog_page">
+				<div id = "blog">
 					<a href="http://www.coopcentofiori.it/" target="_blank">Vai al blog</a>
 				</div>
-				<div id = "titre_principale">
+				<div id = "title-main">
 					<h1>servizi attivi per affrontare al meglio questo periodo di difficoltà</h1>
-					<h5>Nessuno si salva da solo</h5>
+					<p>Nessuno si salva da solo</p>
 				</div>
 				<nav>
 						<ul>
@@ -33,10 +33,11 @@
 							<li><a href ="#">bambini e famiglie</a></li>
 						</ul>
 				</nav>
+				<div id ="banner-img">
+					<p class="message">L'anno 2020 è stato l'anno che si ricorderà l'umanita a traverso la pandemia <strong>COVID-19</strong></p>
+				</div>
 			</header>
-			<div id ="baniere_img">
-				<p>L'anno 2020 è stato l'anno che si ricorderà l'umanita a traverso la pandemia <strong>COVID-19</strong></p>
-			</div>
+			
         </div>
     </body>
 </html>
