Add the content in the index.html and create style

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500;600&family=Ranchers&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
         <div id="bloc-page">
@@ -37,7 +39,50 @@
 					<p class="message">L'anno 2020 è stato l'anno che si ricorderà l'umanita a traverso la pandemia <strong>COVID-19</strong></p>
 				</div>
 			</header>
-			
+
+			<main>
+				<div class="content-main">
+					<div class="info-main">
+						<h3>chi siamo</h3>
+						<p>
+							La ligàza, nel dialetto romagnolo, era un grande fazzoletto che i contadini 
+							usavano per portare il loro pranzo nei campi. 
+							Al giorno d'oggi la ligaza è un pranzo comunitario nel quale ognuno porta 
+							qualcosa da casa.
+						</p>
+						<p>
+							In questo momento non ci è possibile stare insieme in piazza ma ci sono tante 
+							iniziative di solidarietà da parte di amministrazioni, associazioni, aziende, 
+							privati cittadini, che messe insieme costruiscono una rete per aiutarci a non 
+							rimanere soli in questa situazione di emergenza.
+						</p>
+						<p>
+							Ligaza è uno spazio in rete costruito da persone che vivono a Santarcangelo e a 
+							Villa Verucchio, ospiti del progetto Siproimi dell'Unione Comuni della Valconca. 
+							Lo sguardo per adesso è rivolto alla Provincia di Rimini ma la nostra ambizione è 
+							di arrivare in tutto il mondo.<br/>
+							Scrivici <a href ="mailto:sprarvalmarecchia@gmail.com" title="Scrivici" target="_blank">
+								<strong> qui</strong></a> per segnalare un'iniziativa
+						</p>
+					</div>
+				</div>
+
+				<article></article>
+			</main>
+		<!--
+			<footer>
+				<p>
+					<strong>Copyright &copy; 2020</strong>
+					<a href=" https://www.sprar.it/" target="_blank" title="Clicca per accedere al sito"><img src="images/Logo_Siproimi.png"></a>
+					<a href="http://www.unionevalconca.rn.it/" target="_blank" title="Cliccare per accedere al sito"><img src="images/logo_unione2.png" alt="Unione"/></a>
+					<a href=" http://www.coopcentofiori.it/" target="_blank" title="Cliccare per accedere al sito"><img src="images/logo_centofiori.png"></a>
+					<a href="  https://www.ilmillepiedi.it/" target="_blank" title="Cliccare per accedere al sito"><img src="images/logo_millepiedi2.png" alt="millepiedi"/></a>
+				</p>
+				<div id="pied_page">
+					<span id="creative_commons">cc</span> <span id="auteur">Gando Diallo</span>
+				</div>
+			</footer>
+		-->			
         </div>
     </body>
 </html>
