Add the article and logo

--- a/index.html
+++ b/index.html
@@ -65,19 +65,38 @@
 								<strong> qui</strong></a> per segnalare un'iniziativa
 						</p>
 					</div>
+					<article>
+						<h3>Nuovità per la pandemia</h3>
+					</article>
 				</div>
 
-				<article></article>
+				<div class="logo">
+					<div class="logo-siproimi">
+						<p><img src="images/Logo_Siproimi.png" alt="logo siproimi"></p>
+						<span class="info"><a href="https://www.sprar.it/" target="_blank">Informazione</a></span>
+					</div>
+					<div class="logo-unione">
+						<p><img src="images/logo_unione2.png" alt="Unione"/></p>
+						<span class="info"><a href="http://www.unionevalconca.rn.it/" target="_blank">Informazione</a></span>
+					</div>
+					<div class="logo-centofiori">
+						<p><img src="images/logo_centofiori.png" alt="logo centofiori"></p>
+						<span class="info"><a href="http://www.coopcentofiori.it/" target="_blank">Informazione</a></span>
+					</div>
+					<div class="logo-millepiedi">
+						<p><img src="images/logo_millepiedi2.png" alt="millepiedi"/></p>
+						<span class="info"><a href="https://www.ilmillepiedi.it/" target="_blank">Informazione</a></span>
+					</div>
+				</div>
+
 			</main>
 		<!--
 			<footer>
-				<p>
-					<strong>Copyright &copy; 2020</strong>
-					<a href=" https://www.sprar.it/" target="_blank" title="Clicca per accedere al sito"><img src="images/Logo_Siproimi.png"></a>
+				<a href=" https://www.sprar.it/" target="_blank" title="Clicca per accedere al sito"><img src="images/Logo_Siproimi.png"></a>
 					<a href="http://www.unionevalconca.rn.it/" target="_blank" title="Cliccare per accedere al sito"><img src="images/logo_unione2.png" alt="Unione"/></a>
 					<a href=" http://www.coopcentofiori.it/" target="_blank" title="Cliccare per accedere al sito"><img src="images/logo_centofiori.png"></a>
 					<a href="  https://www.ilmillepiedi.it/" target="_blank" title="Cliccare per accedere al sito"><img src="images/logo_millepiedi2.png" alt="millepiedi"/></a>
-				</p>
+				<p><strong>Copyright &copy; 2020</strong></p>
 				<div id="pied_page">
 					<span id="creative_commons">cc</span> <span id="auteur">Gando Diallo</span>
 				</div>
