Add footer and style footer

--- a/index.html
+++ b/index.html
@@ -90,18 +90,11 @@
 				</div>
 
 			</main>
-		<!--
+
 			<footer>
-				<a href=" https://www.sprar.it/" target="_blank" title="Clicca per accedere al sito"><img src="images/Logo_Siproimi.png"></a>
-					<a href="http://www.unionevalconca.rn.it/" target="_blank" title="Cliccare per accedere al sito"><img src="images/logo_unione2.png" alt="Unione"/></a>
-					<a href=" http://www.coopcentofiori.it/" target="_blank" title="Cliccare per accedere al sito"><img src="images/logo_centofiori.png"></a>
-					<a href="  https://www.ilmillepiedi.it/" target="_blank" title="Cliccare per accedere al sito"><img src="images/logo_millepiedi2.png" alt="millepiedi"/></a>
-				<p><strong>Copyright &copy; 2020</strong></p>
-				<div id="pied_page">
-					<span id="creative_commons">cc</span> <span id="auteur">Gando Diallo</span>
-				</div>
-			</footer>
-		-->			
+				<p><span>Copyright &copy; 2020</span></p>
+				<p><span id="creative-commons">cc</span> Gando Diallo</p>
+			</footer>		
         </div>
     </body>
 </html>
